--- a/Editor/formeditor.lfm
+++ b/Editor/formeditor.lfm
@@ -130,7 +130,7 @@ object FormEditFrame: TFormEditFrame
           OnGetPickList = EventEditorGetPickList
           ColWidths = (
             64
-            198
+            172
           )
         end
       end
@@ -208,11 +208,12 @@ object FormEditFrame: TFormEditFrame
     end
   end
   object ImageList1: TImageList
+    Height = 24
     Width = 24
     left = 768
     top = 240
     Bitmap = {
-      4C69050000001800000010000000FF9933000000000000000000000000000000
+      4C69050000001800000018000000FF9933000000000000000000000000000000
       0000000000000000000000000000000000000000000000000000000000000000
       0000000000000000000000000000000000000000000000000000000000000000
       00000000000000000000FF9933000000000000000000FF993354FF993381FF99
@@ -260,7 +261,31 @@ object FormEditFrame: TFormEditFrame
       FFFFFFF2E4FFFF8C1A800000000000000000FF8C1A80FFF2E4FFFFFFFFFFFFFF
       FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
       FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-      FFFFFFF2E4FFFF8C1A8000000000FEFEFE00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FFFFFFF2E4FFFF8C1A800000000000000000FF8C1A80FFF2E4FFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFF2E4FFFF8C1A800000000000000000FF8C1A80FFF2E4FFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFF2E4FFFF8C1A800000000000000000FF8C1A80FFF2E4FFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFBFBFBFFFBFBFBFFFBFBFBFFFBFBFBFFFBFBFBFFFBFB
+      FBFFFFF2E5FFFF8C1A800000000000000000FF8C1980FFF3E7FFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFD8D8D8FFDADADAFFDADADAFFDADADAFFDADADAFFD8D8
+      D8FFFFF5E9FFFF8C19800000000000000000FF8E1E81FFE2C6FFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFBFBFBFFFBFBFBFFFBFBFBFFFBFBFBFFFBFBFBFFFBFC
+      FDFFFFE3C7FFFF8E1E810000000000000000FF973054FF9D3BF3FFE2C6FFFFF3
+      E7FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2
+      E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF6
+      EEFFFF9C39FAFF973053000000000000000000000000FF973054FF8E1E81FF8C
+      1980FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C
+      1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C
+      1880FF9831710000000000000000FF9933000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      00000000000000000000FF993300FEFEFE00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
@@ -305,10 +330,34 @@ object FormEditFrame: TFormEditFrame
       D5FFFDF7F8FFB78356FFCFC4BBFF9E5E28FFF3DED2FFE9DEE0FFE6D5D3FFE7D7
       D6FFE7D7D6FFE7D7D7FFE6D6D5FFE6D6D5FFE4D5D4FFE0D0D0FFE6D6D5FFE9D9
       D9FFEADAD9FFE8D8D8FFE6D6D5FFE4D4D4FFE7D8D7FFE7D7D6FFE7D7D6FFE3D2
-      D1FFFDF4F6FFB57F53FFCFC5BCFFA0602700F6E2D6FFE1D7DAFFDECECDFFDFD0
+      D1FFFDF4F6FFB57F53FFCFC5BCFFA06027FFF6E2D6FFE1D7DAFFDECECDFFDFD0
       D0FFDFD0D0FFDFD0D0FFDFD0D0FFDECFCFFFDFD1D0FFE0D1D1FFDECFCFFFDFD0
       D0FFDECFCFFFDFD0D0FFDECFCFFFE0D1D0FFDFD0D0FFDFD0D0FFDFD0D0FFDACB
-      CAFFF9F4F5FFB98354FFCEC3BAFFFEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      CAFFF9F4F5FFB98354FFCEC3BAFF976537FFD59C78FFF0A88EFFEEA58BFFEEA6
+      8CFFEFA68CFFEFA68CFFEFA68CFFEFA68CFFEFA68CFFEFA68CFFEFA68CFFEFA6
+      8CFFEFA68CFFEFA68CFFEFA68CFFEFA68CFFEFA68CFFEFA68CFFEEA68CFFEDA5
+      8BFFF3AC94FFA66E41FFDAD4CDFFC4BEB6FF8F6337FF833E0AFF85400AFF8540
+      0AFF85400AFF85400AFF85400AFF85400AFF85400AFF85400AFF85400AFF8540
+      0AFF85400AFF85400AFF85400AFF85400AFF85400AFF85400AFF85400AFF8540
+      0BFF84410CFFB4A089FFF8FBFE00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
       FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
       FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
       FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
@@ -356,6 +405,30 @@ object FormEditFrame: TFormEditFrame
       FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
       FE00FEFEFE00454545FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7
       E7FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7E7FF454545FFFEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00454545FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7
+      E7FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7E7FFE3E7E7FF454545FFFEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00454545FF454545FF454545FF454545FF454545FF454545FF4545
+      45FF454545FF454545FF454545FF454545FF454545FF454545FFFEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
+      FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FEFE
       FE00FEFEFE00FEFEFE00FEFEFE00FEFEFE00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
@@ -404,7 +477,31 @@ object FormEditFrame: TFormEditFrame
       FFFFFFFFFFFFE2EFF1FFFFFFFF00FFFFFF00A19D9DFF646F71FFFFFFFFFFFFFF
       FFFFFFFFFFFFBE6C38FFBE6C38FFBE6C38FFBE6C38FFFFFFFFFFBE6C38FFBE6C
       38FFBE6C38FFBE6C38FFFFFFFFFFFFFFFFFFFFFFFFFF000300FFFFFFFFFFFFFF
-      FFFFFFFFFFFFE2EFF1FFFFFFFF00FEFEFE00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FFFFFFFFFFFFE2EFF1FFFFFFFF00FFFFFF00A19D9DFF646F71FFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFF000200FF000300FFFFFFFFFF000201FF0000
+      00FFFFFFFFFFE2EFF1FFFFFFFF00FFFFFF00A19D9DFF646F71FFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFE2EFF1FFFFFFFF00FFFFFF00A19D9DFFE2EFF1FFE2EFF1FFE2EF
+      F1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EF
+      F1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EFF1FFE2EF
+      F1FFE2EFF1FFE2EFF1FFFFFFFF00FFFFFF00FCFAFA00FFFAFD00FFFAFD00FFFA
+      FD00FFFBFD00FAFCFD00FCFBFD00FFFAFD00FFF9FD00FFF8FC00FFFAFD00F9FD
+      FE00F0F8F800FCFEFF00FFFEFF00FFFDFF00FEF7FA00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FDFDFD00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FEFEFE00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
@@ -452,7 +549,31 @@ object FormEditFrame: TFormEditFrame
       38FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00BE6C38FFBE6C38FFFFFF
       FF00FFFFFF00FFFFFF00BE6C38FFBE6C38FFFFFFFF00BE6C38FFBE6C38FFBE6C
       38FFBE6C38FFFFFFFF00FFFFFF00FFFFFF00BE6C38FFBE6C38FFBE6C38FFBE6C
-      38FFFFFFFF00FFFFFF00FFFFFF00
+      38FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00BE6C38FFBE6C38FFBE6C
+      38FFBE6C38FFBE6C38FFBE6C38FFBE6C38FFFFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00
     }
   end
 end
