--- a/IDE/Forms/compileroptions.lfm
+++ b/IDE/Forms/compileroptions.lfm
@@ -7,6 +7,8 @@ object CompilerOptionsForm: TCompilerOptionsForm
   Caption = 'Compiler Optionen'
   ClientHeight = 298
   ClientWidth = 600
+  Position = poScreenCenter
+  ShowInTaskBar = stAlways
   LCLVersion = '1.7'
   object CompilerConfigBox: TGroupBox
     Left = 8
@@ -107,13 +109,13 @@ object CompilerOptionsForm: TCompilerOptionsForm
     ClientHeight = 229
     ClientWidth = 284
     TabOrder = 1
-    object CLogEdit1: TEdit
+    object ILogEdit: TEdit
       Left = 8
       Height = 23
       Top = 144
       Width = 244
       TabOrder = 0
-      Text = '($ProjDir)\Output\Compile.txt'
+      Text = '($ProjDir)\Output\Interpreter.txt'
     end
     object Label4: TLabel
       Left = 8
@@ -139,7 +141,7 @@ object CompilerOptionsForm: TCompilerOptionsForm
       Caption = 'Log Pfad:'
       ParentColor = False
     end
-    object COutputBox1: TCheckBox
+    object IOutputBox: TCheckBox
       Left = 8
       Height = 19
       Top = 200
